--- a/03hand-coding/skis.html
+++ b/03hand-coding/skis.html
@@ -25,7 +25,7 @@
         <main>
         <h1>Types of Skis</h1>
      
-        <p>In this section, we'll break down <a href="#types-of-skis">each type of skis,</a> from skis for groomed trails to those built for deep snow. Whether you're tackling steep slopes or icy terrain, knowing about ski design is crucial. Join us to learn about the various options, so you can pick the perfect ski for your style!</p>
+        <p>In this section, we'll break down <a href="#types-of-skis">each type of skis,</a> from skis for groomed trails to those built for deep snow. Whether you're tackling <em>steep slopes or icy terrain</em>, knowing about ski design is crucial. Join us to learn about the various options, so you can pick the perfect ski for your style!</p>
         <p>The main five skis we will review are as follows:</p>
             <ol>
             <li>Carving skis</li>
