--- a/04intro-css/index.html
+++ b/04intro-css/index.html
@@ -32,10 +32,9 @@
         <p>Welcome to <strong>Alpine Insights</strong>, your ultimate destination for ski enthusiasts seeking expert ratings and authentic user reviews on the latest ski gear. Whether you're <a href=https://www.skimag.com/ski-resort-life/the-best-ski-resorts-in-the-u-s/ target="_blank">carving down pristine slopes</a>  or shredding through backcountry powder, we're here to provide you with invaluable insights to help you make informed decisions about your next pair of skis. Our platform offers comprehensive evaluations from seasoned professionals alongside firsthand accounts from passionate skiers like yourself! <strong>Join our community</strong> and contribute to the collective knowledge base, ensuring that every skier can find the perfect match for their style and <a id= "#types-of-skis">preferences</a> Explore our reviews, discover top-rated skis, and embark on your next alpine adventure with confidence, only at Alpine Insights.</p>
         <h2>Where We Began:</h2>
         <p>Alpine Insights is a passion project brought to life by Emma Bauman, a dedicated Web Development student at Utah Valley University. Born out of Emma's love for skiing and her knack for crafting digital experiences, Alpine Insights is more than just a website—it's a community-driven hub for ski enthusiasts worldwide.Emma's vision for Alpine Insights stems from her desire to blend her technical skills with her outdoor passions, creating a space where skiers can come together to share their knowledge, experiences, and recommendations. Join Emma and the Alpine Insights community on our journey to revolutionize how skis are reviewed and rated, one slope at a time.</p>
-        <h2>Who We Serve</h2>
+        <h2>Who We Serve:</h2>
         <p>We pride ourselves on serving a diverse community of ski enthusiasts with our comprehensive reviews and ratings. Whether you're a novice hitting the slopes for the first time or an experienced skier seeking the latest gear insights, our platform caters to your needs. Check out our who we serve list below to see if Alpine Insights is right for you.
         </p>
-        </main>
         <ul>
             <li>Ski enthusiasts of all levels, from beginners to advanced</li>
             <li>Individuals seeking honest and comprehensive ski gear reviews</li>
@@ -49,6 +48,7 @@
         Salt Lake City, UT <br/>
         84124 <br/>
         </address>
+        </main>
          <!--Start of the page footer -->
         <footer>
         <a href= #top>Back to Top</a>
