made changes to file

--- a/04intro-css/index.html
+++ b/04intro-css/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Carving the Slopes, Crafting your Future">
     <meta name="author" content= "Emma Bauman">
-    <link rel="stylesheet" href= design.css>
+    <link rel="stylesheet" href= "design.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
