--- a/05images/skis.html
+++ b/05images/skis.html
@@ -21,6 +21,7 @@
         <li><a href="index.html">About</a></li>
          <li class="active"><a href="skis.html">Types of Skis</a></li>
          <li><a href="images.html">Images</a></li>
+        <li><a href="form.html">Request Information</a></li>
         </ul>
         </nav>
          <!--Start of the page content -->
