--- a/05images/images.html
+++ b/05images/images.html
@@ -24,6 +24,7 @@
         <li><a href="index.html">About</a></li>
          <li><a href="skis.html">Types of Skis</a></li>
         <li class="active"><a href="images.html">Images</a></li>
+        <li><a href="form.html">Request Information</a></li>
         </ul>
             
         </nav>
