--- a/05images/images.html
+++ b/05images/images.html
@@ -47,10 +47,11 @@
                 <figcaption>Freestyle Skis</figcaption>
             </figure>
         
-               <figure>
+        <figure>
                 <img src="images/allterrain.png" alt="All Terrain Skis"
                 width="320" height="320" loading="lazy">
                 <figcaption>All Terrain Skis</figcaption>
+       </figure>
 <figure>
     <img src="images/park.webp" alt="Park Skis" width="225" height="225" loading="lazy">
     <figcaption>Park Skis</figcaption>
